performed some updates

--- a/subjects-admin/subject.html
+++ b/subjects-admin/subject.html
@@ -73,10 +73,14 @@
                   <!-- Options -->
                   <ul>
                     <li>
-                      <span>Modifica</span><i class="material-icons">create</i>
+                      <a href="#question-modal">
+                        Modifica<i class="material-icons">create</i>
+                      </a>
                     </li>
                     <li>
-                      <span>Rimuovi</span><i class="material-icons">delete</i>
+                      <a href="#question-modal-delete">
+                        Rimuovi<i class="material-icons">delete</i>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -99,10 +103,14 @@
                   <!-- Options -->
                   <ul>
                     <li>
-                      <span>Modifica</span><i class="material-icons">create</i>
+                      <a href="#question-modal">
+                        Modifica<i class="material-icons">create</i>
+                      </a>
                     </li>
                     <li>
-                      <span>Rimuovi</span><i class="material-icons">delete</i>
+                      <a href="#question-modal-delete">
+                        Rimuovi<i class="material-icons">delete</i>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -140,10 +148,14 @@
                   <!-- Options -->
                   <ul>
                     <li>
-                      <span>Modifica</span><i class="material-icons">create</i>
+                      <a href="#question-modal">
+                        Modifica<i class="material-icons">create</i>
+                      </a>
                     </li>
                     <li>
-                      <span>Rimuovi</span><i class="material-icons">delete</i>
+                      <a href="#question-modal-delete">
+                        Rimuovi<i class="material-icons">delete</i>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -164,10 +176,14 @@
                   <!-- Options -->
                   <ul>
                     <li>
-                      <span>Modifica</span><i class="material-icons">create</i>
+                      <a href="#question-modal">
+                        Modifica<i class="material-icons">create</i>
+                      </a>
                     </li>
                     <li>
-                      <span>Rimuovi</span><i class="material-icons">delete</i>
+                      <a href="#question-modal-delete">
+                        Rimuovi<i class="material-icons">delete</i>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -190,10 +206,14 @@
                   <!-- Options -->
                   <ul>
                     <li>
-                      <span>Modifica</span><i class="material-icons">create</i>
+                      <a href="#question-modal">
+                        Modifica<i class="material-icons">create</i>
+                      </a>
                     </li>
                     <li>
-                      <span>Rimuovi</span><i class="material-icons">delete</i>
+                      <a href="#question-modal-delete">
+                        Rimuovi<i class="material-icons">delete</i>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -231,10 +251,14 @@
                   <!-- Options -->
                   <ul>
                     <li>
-                      <span>Modifica</span><i class="material-icons">create</i>
+                      <a href="#question-modal">
+                        Modifica<i class="material-icons">create</i>
+                      </a>
                     </li>
                     <li>
-                      <span>Rimuovi</span><i class="material-icons">delete</i>
+                      <a href="#question-modal-delete">
+                        Rimuovi<i class="material-icons">delete</i>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -257,10 +281,14 @@
                   <!-- Options -->
                   <ul>
                     <li>
-                      <span>Modifica</span><i class="material-icons">create</i>
+                      <a href="#question-modal">
+                        Modifica<i class="material-icons">create</i>
+                      </a>
                     </li>
                     <li>
-                      <span>Rimuovi</span><i class="material-icons">delete</i>
+                      <a href="#question-modal-delete">
+                        Rimuovi<i class="material-icons">delete</i>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -283,10 +311,14 @@
                   <!-- Options -->
                   <ul>
                     <li>
-                      <span>Modifica</span><i class="material-icons">create</i>
+                      <a href="#question-modal">
+                        Modifica<i class="material-icons">create</i>
+                      </a>
                     </li>
                     <li>
-                      <span>Rimuovi</span><i class="material-icons">delete</i>
+                      <a href="#question-modal-delete">
+                        Rimuovi<i class="material-icons">delete</i>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -309,10 +341,14 @@
                   <!-- Options -->
                   <ul>
                     <li>
-                      <span>Modifica</span><i class="material-icons">create</i>
+                      <a href="#question-modal">
+                        Modifica<i class="material-icons">create</i>
+                      </a>
                     </li>
                     <li>
-                      <span>Rimuovi</span><i class="material-icons">delete</i>
+                      <a href="#question-modal-delete">
+                        Rimuovi<i class="material-icons">delete</i>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -335,10 +371,14 @@
                   <!-- Options -->
                   <ul>
                     <li>
-                      <span>Modifica</span><i class="material-icons">create</i>
+                      <a href="#question-modal">
+                        Modifica<i class="material-icons">create</i>
+                      </a>
                     </li>
                     <li>
-                      <span>Rimuovi</span><i class="material-icons">delete</i>
+                      <a href="#question-modal-delete">
+                        Rimuovi<i class="material-icons">delete</i>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -374,7 +414,7 @@
       </div>
     </div>
     <!-- drawer - END -->
-    
+
     <!-- drawer.js-link -->
     <script src="../js/drawer.js"></script>
     <script src="../js/slide-menu.js"></script>
