--- a/subjects-admin/subjects.html
+++ b/subjects-admin/subjects.html
@@ -95,10 +95,14 @@
               <!-- Options -->
               <ul>
                 <li>
-                  <span>Modifica</span><i class="material-icons">create</i>
+                  <a href="#question-modal">
+                    Modifica<i class="material-icons">create</i>
+                  </a>
                 </li>
                 <li>
-                  <span>Rimuovi</span><i class="material-icons">delete</i>
+                  <a href="#question-modal-delete">
+                    Rimuovi<i class="material-icons">delete</i>
+                  </a>
                 </li>
               </ul>
             </div>
@@ -118,10 +122,14 @@
               <!-- Options -->
               <ul>
                 <li>
-                  <span>Modifica</span><i class="material-icons">create</i>
+                  <a href="#question-modal">
+                    Modifica<i class="material-icons">create</i>
+                  </a>
                 </li>
                 <li>
-                  <span>Rimuovi</span><i class="material-icons">delete</i>
+                  <a href="#question-modal-delete">
+                    Rimuovi<i class="material-icons">delete</i>
+                  </a>
                 </li>
               </ul>
             </div>
@@ -141,10 +149,14 @@
               <!-- Options -->
               <ul>
                 <li>
-                  <span>Modifica</span><i class="material-icons">create</i>
+                  <a href="#question-modal">
+                    Modifica<i class="material-icons">create</i>
+                  </a>
                 </li>
                 <li>
-                  <span>Rimuovi</span><i class="material-icons">delete</i>
+                  <a href="#question-modal-delete">
+                    Rimuovi<i class="material-icons">delete</i>
+                  </a>
                 </li>
               </ul>
             </div>
@@ -164,10 +176,14 @@
               <!-- Options -->
               <ul>
                 <li>
-                  <span>Modifica</span><i class="material-icons">create</i>
+                  <a href="#question-modal">
+                    Modifica<i class="material-icons">create</i>
+                  </a>
                 </li>
                 <li>
-                  <span>Rimuovi</span><i class="material-icons">delete</i>
+                  <a href="#question-modal-delete">
+                    Rimuovi<i class="material-icons">delete</i>
+                  </a>
                 </li>
               </ul>
             </div>
