performed some updates in the questions pages

--- a/questions-coordinatore/domande.html
+++ b/questions-coordinatore/domande.html
@@ -82,31 +82,18 @@
       <div class="divider"></div>
 
       <!-- questions - START -->
-      <div class="question-wrapper" id="questino-1" data-year="1">
+      <div class="question-wrapper" id="questino-1">
         <div>
           <div>
-            <h4>Unita 1 > Romanticismo > caratteristiche fondamentali</h4>
+            <h4><a href="/questions/questino-1">Unita 1 > Romanticismo > caratteristiche fondamentali</a></h4>
             <h6>Oct, 8, 2020</h6>
           </div>
-          <div class="dropdown">
-            <button></button>
-
-            <!-- Options -->
-            <ul>
-              <li>
-                <a href="#question-modal">
-                  Modifica<i class="material-icons">create</i>
-                </a>
-              </li>
-              <li>
-                <a href="#question-modal-delete">
-                  Rimuovi<i class="material-icons">delete</i>
-                </a>
-              </li>
-            </ul>
-          </div>
         </div>
-        <p>Sulla base di quanto studiato in classe, spiega il concetto di popolo in ottica romantica, facendo un paragone tra il Romanticismo e le visioni delle correnti fondamentale del Primo Ottocento.</p>
+        <p>
+          Sulla base di quanto studiato in classe, spiega il concetto di popolo
+          in ottica romantica, facendo un paragone tra il Romanticismo e le
+          visioni delle correnti fondamentale del Primo Ottocento.
+        </p>
         <div>
           <h5>
             <span class="level difficult"></span>
@@ -116,31 +103,18 @@
           <h5><strong>Durata:</strong> 15min</h5>
         </div>
       </div>
-      <div class="question-wrapper" id="questino-2" data-year="1">
+      <div class="question-wrapper" id="questino-2">
         <div>
           <div>
-            <h4>Unita 1 > Romanticismo > caratteristiche fondamentali</h4>
+            <h4><a href="/questions/questino-2">Unita 1 > Romanticismo > caratteristiche fondamentali</a></h4>
             <h6>Oct, 8, 2020</h6>
           </div>
-          <div class="dropdown">
-            <button></button>
-
-            <!-- Options -->
-            <ul>
-              <li>
-                <a href="#question-modal">
-                  Modifica<i class="material-icons">create</i>
-                </a>
-              </li>
-              <li>
-                <a href="#question-modal-delete">
-                  Rimuovi<i class="material-icons">delete</i>
-                </a>
-              </li>
-            </ul>
-          </div>
         </div>
-        <p>Sulla base di quanto studiato in classe, spiega il concetto di popolo in ottica romantica, facendo un paragone tra il Romanticismo e le visioni delle correnti fondamentale del Primo Ottocento.</p>
+        <p>
+          Sulla base di quanto studiato in classe, spiega il concetto di popolo
+          in ottica romantica, facendo un paragone tra il Romanticismo e le
+          visioni delle correnti fondamentale del Primo Ottocento.
+        </p>
         <div>
           <h5>
             <span class="level medium"></span>
@@ -150,31 +124,18 @@
           <h5><strong>Durata:</strong> 15min</h5>
         </div>
       </div>
-      <div class="question-wrapper" id="questino-3" data-year="1">
+      <div class="question-wrapper" id="questino-3">
         <div>
           <div>
-            <h4>Unita 1 > Romanticismo > caratteristiche fondamentali</h4>
+            <h4><a href="/questions/questino-3">Unita 1 > Romanticismo > caratteristiche fondamentali</a></h4>
             <h6>Oct, 8, 2020</h6>
           </div>
-          <div class="dropdown">
-            <button></button>
-
-            <!-- Options -->
-            <ul>
-              <li>
-                <a href="#question-modal">
-                  Modifica<i class="material-icons">create</i>
-                </a>
-              </li>
-              <li>
-                <a href="#question-modal-delete">
-                  Rimuovi<i class="material-icons">delete</i>
-                </a>
-              </li>
-            </ul>
-          </div>
         </div>
-        <p>Sulla base di quanto studiato in classe, spiega il concetto di popolo in ottica romantica, facendo un paragone tra il Romanticismo e le visioni delle correnti fondamentale del Primo Ottocento.</p>
+        <p>
+          Sulla base di quanto studiato in classe, spiega il concetto di popolo
+          in ottica romantica, facendo un paragone tra il Romanticismo e le
+          visioni delle correnti fondamentale del Primo Ottocento.
+        </p>
         <div>
           <h5>
             <span class="level easy"></span>
@@ -267,10 +228,10 @@
       <a href="#" class="modal-background"></a>
       <div class="modal">
         <form action="post">
-          <input type="text" name="id" id="id" value="" style="display: none;">
+          <input type="text" name="id" id="id" value="" style="display: none" />
           <h4>Sei sicuro di voler rimuovere questa domanda?</h4>
           <p class="m-vertical"></p>
-          <input type="submit" value="Conferma" class="btn">
+          <input type="submit" value="Conferma" class="btn" />
         </form>
         <a href="#" class="modal-close-btn">&times;</a>
       </div>
@@ -279,6 +240,5 @@
 
     <!-- drawer.js-link -->
     <script src="../js/drawer.js"></script>
-    <script src="../js/questions.js"></script>
   </body>
 </html>
