--- a/questions-edit/domande.html
+++ b/questions-edit/domande.html
@@ -37,35 +37,21 @@
     <!-- Nav-Bar - END -->
 
     <div class="container">
-
       <div class="divider"></div>
 
-       <!-- questions - START -->
-       <div class="question-wrapper" id="questino-1" data-year="1">
+      <!-- questions - START -->
+      <div class="question-wrapper" id="questino-1" data-year="1">
         <div>
           <div>
             <h4>Unita 1 > Romanticismo > caratteristiche fondamentali</h4>
             <h6>Oct, 8, 2020</h6>
           </div>
-          <div class="dropdown">
-            <button></button>
-
-            <!-- Options -->
-            <ul>
-              <li>
-                <a href="#question-modal">
-                  Modifica<i class="material-icons">create</i>
-                </a>
-              </li>
-              <li>
-                <a href="#question-modal-delete">
-                  Rimuovi<i class="material-icons">delete</i>
-                </a>
-              </li>
-            </ul>
-          </div>
         </div>
-        <p>Sulla base di quanto studiato in classe, spiega il concetto di popolo in ottica romantica, facendo un paragone tra il Romanticismo e le visioni delle correnti fondamentale del Primo Ottocento.</p>
+        <p>
+          Sulla base di quanto studiato in classe, spiega il concetto di popolo
+          in ottica romantica, facendo un paragone tra il Romanticismo e le
+          visioni delle correnti fondamentale del Primo Ottocento.
+        </p>
         <div>
           <h5>
             <span class="level difficult"></span>
@@ -228,10 +214,10 @@
       <a href="#" class="modal-background"></a>
       <div class="modal">
         <form action="post">
-          <input type="text" name="id" id="id" value="" style="display: none;">
+          <input type="text" name="id" id="id" value="" style="display: none" />
           <h4>Sei sicuro di voler rimuovere questa domanda?</h4>
           <p class="m-vertical"></p>
-          <input type="submit" value="Conferma" class="btn">
+          <input type="submit" value="Conferma" class="btn" />
         </form>
         <a href="#" class="modal-close-btn">&times;</a>
       </div>
@@ -250,6 +236,5 @@
 
     <!-- drawer.js-link -->
     <script src="../js/drawer.js"></script>
-    <script src="../js/questions.js"></script>
   </body>
 </html>
