modified select placeholder to a hidden null-valued placeholder, deleted account.css, removed unnecessary settings icons in account.html and added h4 tags in genera-esame-2.html

--- a/classes-admin/class.html
+++ b/classes-admin/class.html
@@ -74,7 +74,7 @@
           <h3>Titolo</h3>
           <div class="flex-wrapper justify-between align-baseline">
             <select name="anno" id="anno">
-              <option value="placeholder">Anno</option>
+              <option value="" disabled selected hidden>Anno</option>
               <option value="1" selected>1</option>
               <option value="2">2</option>
               <option value="3">3</option>
