--- a/generazione-esami/genera-esame-2.html
+++ b/generazione-esami/genera-esame-2.html
@@ -35,6 +35,9 @@
     <!-- Nav-Bar - END -->
 
     <div class="container">
+        <h4>Domande: 2</h4>
+        <h4>Durata complessiva: 25 min</h4>
+        <div class="divider"></div>
         <form action="genera-esame-2.html" class="card">
             <div class="justify-around m-vertical">
                 <h1 class="text-center">Domande</h1>
@@ -42,50 +45,59 @@
 
             <div class="justify-around m-vertica flex-wrapper">
                 <select id="unita" name="unita" size="1" class="genera-select">
+                    <option value="" disabled selected hidden>Unita</option>
                     <option value="unita 1">Unita 1</option>
                     <option value="unita 2">Unita 2</option>
                     <option value="unita 3">Unita 3</option>
                     <option value="unita 4">Unita 4</option>
                 </select>
                 <select id="argomento" name="argomento" size="1" class="genera-select">
+                    <option value="" disabled selected hidden>Argomento</option>
                     <option value="argomento 1">Argomento 1</option>
                     <option value="argomento 2">Argomento 2</option>
                     <option value="argomento 3">Argomento 3</option>
                     <option value="argomento 4">Argomento 4</option>
                 </select>
                 <select id="sottoargomento" name="sottoargomento" size="1" class="genera-select">
+                    <option value="" disabled selected hidden>Sotto argomento</option>
                     <option value="sotto argomento 1">Sotto argomento 1</option>
                     <option value="sotto argomento 2">Sotto argomento 2</option>
                     <option value="sotto argomento 3">Sotto argomento 3</option>
                     <option value="sotto argomento 4">Sotto argomento 4</option>
                 </select>
                 <select id="difficolta" name="difficolta" size="1" class="genera-select">
+                    <option value="" disabled selected hidden>Difficolta</option>
                     <option value="facile">Facile</option>
                     <option value="medio">Medio</option>
                     <option value="difficile">Difficile</option>
                 </select>
             </div>
+            <div class="divider"></div>
 
             <div class="justify-around m-vertical flex-wrapper">
                 <select id="unita" name="unita" size="1" class="genera-select">
+                    <option value="" disabled selected hidden>Unita</option>
                     <option value="unita 1">Unita 1</option>
                     <option value="unita 2">Unita 2</option>
                     <option value="unita 3">Unita 3</option>
                     <option value="unita 4">Unita 4</option>
                 </select>
                 <select id="argomento" name="argomento" size="1" class="genera-select">
+                    <option value="" disabled selected hidden>Argomento</option>
                     <option value="argomento 1">Argomento 1</option>
                     <option value="argomento 2">Argomento 2</option>
                     <option value="argomento 3">Argomento 3</option>
                     <option value="argomento 4">Argomento 4</option>
                 </select>
                 <select id="sottoargomento" name="sottoargomento" size="1" class="genera-select">
+                    <option value="" disabled selected hidden>Sotto argomento</option>
                     <option value="sotto argomento 1">Sotto argomento 1</option>
                     <option value="sotto argomento 2">Sotto argomento 2</option>
                     <option value="sotto argomento 3">Sotto argomento 3</option>
                     <option value="sotto argomento 4">Sotto argomento 4</option>
                 </select>
                 <select id="difficolta" name="difficolta" size="1" class="genera-select">
+                    <option value="" disabled selected hidden>Difficolta</option>
                     <option value="facile">Facile</option>
                     <option value="medio">Medio</option>
                     <option value="difficile">Difficile</option>
