--- a/questions-coordinatore/domande.html
+++ b/questions-coordinatore/domande.html
@@ -52,25 +52,25 @@
       <div class="filters-wrapper">
         <form action="">
           <select name="year" id="year">
-            <option value="placeholder">Anno</option>
+            <option value="" disabled selected hidden>Anno</option>
             <option value="1">1 ITI</option>
             <option value="2">2 ITI</option>
             <option value="3">3 ITI</option>
           </select>
           <select name="livello" id="livello">
-            <option value="placeholder">Livello</option>
+            <option value="" disabled selected hidden>Livello</option>
             <option value="1">Facile</option>
             <option value="2">Medio</option>
             <option value="3">Difficile</option>
           </select>
           <select name="unit" id="unit">
-            <option value="placeholder">Unità</option>
+            <option value="" disabled selected hidden>Unità</option>
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
           </select>
           <select name="domande" id="domande">
-            <option value="placeholder">Domande</option>
+            <option value="" disabled selected hidden>Domande</option>
             <option value="mie">Mie</option>
             <option value="tutte">Tutte</option>
           </select>
@@ -157,13 +157,13 @@
           <div class="top">
             <div class="left">
               <select name="year" id="year">
-                <option value="placeholder">Anno</option>
+                <option value="" disabled selected hidden>Anno</option>
                 <option value="1">1 ITI</option>
                 <option value="2">2 ITI</option>
                 <option value="3">3 ITI</option>
               </select>
               <select name="level" id="level">
-                <option value="placeholder">Difficoltà</option>
+                Difficoltà
                 <option value="1">Facile</option>
                 <option value="2">Medio</option>
                 <option value="3">Difficile</option>
@@ -182,19 +182,19 @@
             </div>
             <div class="right">
               <select name="unit" id="unit">
-                <option value="placeholder">Unità</option>
+                <option value="" disabled selected hidden>Unità</option>
                 <option value="1">Unita 1</option>
                 <option value="2">Unita 2</option>
                 <option value="3">Unita 3</option>
               </select>
               <select name="argument" id="argument">
-                <option value="placeholder">Argomento</option>
+                <option value="" disabled selected hidden>Argomento</option>
                 <option value="1">Romanticismo</option>
                 <option value="2">Secondo Ottocento</option>
                 <option value="3">Primo Novecento</option>
               </select>
               <select name="subargument" id="subargument">
-                <option value="placeholder">Sotto-argomento</option>
+                <option value="" disabled selected hidden>Sotto argomento</option>
                 <option value="1">Romanticismo</option>
                 <option value="2">Neoclassicismo</option>
                 <option value="3">Giovanni Verga</option>
