--- a/subjects-admin/subjects.html
+++ b/subjects-admin/subjects.html
@@ -51,7 +51,7 @@
       <div class="filters-wrapper">
         <form action="">
           <select name="year" id="year">
-            <option value="placeholder">Anno</option>
+            <option value="" disabled selected hidden>Anno</option>
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -59,14 +59,14 @@
             <option value="5">5</option>
           </select>
           <select name="tipo" id="tipo">
-            <option value="placeholder">Tipo</option>
+            <option value="" disabled selected hidden>Tipo</option>
             <option value="iti-e-ipi">ITI e IPI</option>
             <option value="iti-o-ipi">ITI o IPI</option>
             <option value="iti">ITI</option>
             <option value="ipi">IPI</option>
           </select>
           <select name="settore" id="settore">
-            <option value="placeholder">Settore</option>
+            <option value="" disabled selected hidden>Settore</option>
             <option value="iti-i">ITI I</option>
             <option value="iti-m">ITI M</option>
             <option value="iti-e">ITI E</option>
