--- a/teachers-admin/account.html
+++ b/teachers-admin/account.html
@@ -54,15 +54,11 @@
             <p><strong>Email: </strong>gamed.gamed@gmail.com</p>
           </div>
         </div>
-  
-        <div class="divider bold"></div>
+        "added account and genera-esame-1 and genera-esame-2 pages with the corrisponding styles file"        <div class="divider bold"></div>
   
         <div class="data-card">
           <div class="justify-between align-center">
             <h2 class="header">Ruoli</h2>
-            <i class="material-icons">
-              <a href="#teacher-roles-modal">settings</a>
-            </i>
           </div>
           <div class="divider"></div>
           <div class="flex-wrapper">
@@ -77,9 +73,6 @@
         <div class="data-card">
           <div class="justify-between align-center">
             <h2 class="header">Insegna</h2>
-            <i class="material-icons">
-              <a href="#teacher-subjects-modal">settings</a>
-            </i>
           </div>
           <div class="divider"></div>
           <div class="flex-wrapper">
@@ -96,9 +89,6 @@
         <div class="data-card">
           <div class="justify-between align-center">
             <h2 class="header">Coordina</h2>
-            <i class="material-icons">
-              <a href="#teacher-coordinations-modal">settings</a>
-            </i>
           </div>
           <div class="divider"></div>
           <div class="flex-wrapper">
