--- a/classes-admin/classes.html
+++ b/classes-admin/classes.html
@@ -84,7 +84,7 @@
           <h3>Titolo</h3>
           <div class="flex-wrapper justify-between m-vertical">
             <select name="anno" id="anno">
-              <option value="placeholder">Anno</option>
+              <option value="" disabled selected hidden>Anno</option>
               <option value="1">1</option>
               <option value="2">2</option>
               <option value="3">3</option>
