made some updates

--- a/generazione-esami/genera-esame-2.html
+++ b/generazione-esami/genera-esame-2.html
@@ -35,8 +35,8 @@
     <!-- Nav-Bar - END -->
 
     <div class="container">
-        <h4>Domande: 2</h4>
-        <h4>Durata complessiva: 25 min</h4>
+        <h5><strong>Domande:</strong> 2</h3>
+        <h5><strong>Durata complessiva:</strong> 25min</h3>
         <div class="divider"></div>
         <form action="genera-esame-2.html" class="card">
             <div class="justify-around m-vertical">
