wrote durata complessiva instead of durata

--- a/generazione-esami/genera-esame-1.html
+++ b/generazione-esami/genera-esame-1.html
@@ -49,7 +49,7 @@
         <div class="input-group">
           <input placeholder="duration" type="number" class="input-field" name="duration" id="duration" min="1"
             required />
-          <label for="duration" class="input-label">Durata (min)</label>
+          <label for="duration" class="input-label">Durata Complessiva (min)</label>
         </div>
       </div>
       <div class="justify-center m-vertical">
