--- a/classes-adminEdit/class.html
+++ b/classes-adminEdit/class.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/basic.css" />
     <link rel="stylesheet" href="../css/components.css" />
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
@@ -63,9 +64,9 @@
         <div class="text-block">Elettro</div>
       </div>
       <!-- subjects - END -->
- 
+
       <div class="m-vertical"></div>
-      
+
       <h3>Insegnanti</h3>
       <!-- teachers - START -->
       <div class="flex-wrapper">
@@ -311,7 +312,8 @@
       </div>
     </div>
     <!-- drawer - END -->
+
+    <!-- drawer.js-link -->
+    <script src="../js/drawer.js"></script>
   </body>
-  <!-- drawer.js-link -->
-  <script src="../js/drawer.js"></script>
 </html>
