--- a/login/login.html
+++ b/login/login.html
@@ -10,33 +10,35 @@
     <title>Generazione Esami | Login</title>
   </head>
   <body>
-    <div class="card login">
-      <h1>Sign In</h1>
-      <form method="get">
-        <div class="input-group">
-          <input
-            type="text"
-            placeholder="email"
-            class="input-field"
-            name="email"
-            id="email"
-            required
-          />
-          <label for="email" class="input-label">Email</label>
-        </div>
-        <div class="input-group">
-          <input
-            type="password"
-            placeholder="password"
-            class="input-field"
-            name="password"
-            id="password"
-            required
-          />
-          <label for="password" class="input-label">Password</label>
-        </div>
-        <input type="submit" class="btn" value="Login" name="login" />
-      </form>
+    <div class="container">
+      <div class="card login">
+        <h1>Sign In</h1>
+        <form method="get">
+          <div class="input-group">
+            <input
+              type="text"
+              placeholder="email"
+              class="input-field"
+              name="email"
+              id="email"
+              required
+            />
+            <label for="email" class="input-label">Email</label>
+          </div>
+          <div class="input-group">
+            <input
+              type="password"
+              placeholder="password"
+              class="input-field"
+              name="password"
+              id="password"
+              required
+            />
+            <label for="password" class="input-label">Password</label>
+          </div>
+          <input type="submit" class="btn" value="Login" name="login" />
+        </form>
+      </div>
     </div>
   </body>
 </html>
