removed unnecessary line

--- a/teachers-admin/account.html
+++ b/teachers-admin/account.html
@@ -54,7 +54,7 @@
             <p><strong>Email: </strong>gamed.gamed@gmail.com</p>
           </div>
         </div>
-        "added account and genera-esame-1 and genera-esame-2 pages with the corrisponding styles file"        <div class="divider bold"></div>
+        <div class="divider bold"></div>
   
         <div class="data-card">
           <div class="justify-between align-center">
