text to email in the type

--- a/login/login.html
+++ b/login/login.html
@@ -16,7 +16,7 @@
         <form method="get">
           <div class="input-group">
             <input
-              type="text"
+              type="email"
               placeholder="email"
               class="input-field"
               name="email"
